--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
 pythonpath = /root/python_env/python3/lib/python3.5/site-packages
 http = :8000
-chdir = /root/plover.cloud
+chdir = /root/apps/plover.cloud
 wsgi-file = config/wsgi.py
-static-map = /static=/root/plover.cloud/static
+static-map = /static=/root/apps/plover.cloud/static
 workers = 5
 # stats = 127.0.0.1:8080
 limit-as = 256
