--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,23 @@
-asn1crypto==0.24.0
-astroid==1.6.3
 beautifulsoup4==4.6.0
-certifi==2018.4.16
-cffi==1.11.5
-chardet==3.0.4
-colorama==0.3.9
 coreapi==2.3.3
-coreschema==0.0.4
-cryptography==2.2.2
 Django==2.0.2
 django-cors-headers==2.2.0
 django-crontab==0.7.1
 django-filter==1.1.0
-django-rest-swagger==2.1.2
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
-ecdsa==0.13
-et-xmlfile==1.0.1
-Fabric3==1.14.post1
-gevent==1.3.0
-greenlet==0.4.13
-idna==2.6
-isort==4.3.4
-itypes==1.1.0
-jdcal==1.4
 jieba==0.39
 Jinja2==2.10
-lazy-object-proxy==1.3.1
 lxml==4.2.1
 Markdown==2.6.11
-MarkupSafe==1.0
-mccabe==0.6.1
-mkl-fft==1.0.0
-mkl-random==1.0.1
-mysqlclient==1.3.12
 numpy==1.14.2
-openapi-codec==1.3.2
-openpyxl==2.5.3
-optionaldict==0.1.1
 pandas==0.22.0
-paramiko==1.18.4
 Pillow==5.1.0
-psutil==5.4.5
-psycopg2-binary==2.7.4
-pycparser==2.18
-pycrypto==2.6.1
 PyJWT==1.6.1
-pylint==1.8.4
 pypinyin==0.30.0
-python-dateutil==2.7.2
-pytz==2018.4
-PyYAML==3.12
-pyzmq==17.0.0
 requests==2.18.4
 simplejson==3.14.0
-six==1.11.0
-tornado==5.0.2
-uritemplate==3.0.0
-urllib3==1.22
 wechatpy==1.6.1
-wincertstore==0.2
-wrapt==1.10.11
-xmltodict==0.11.0
+pyOpenSSL
+django-extensions
+django-werkzeug-debugger-runserver
