更新定时任务

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,11 +1,8 @@
 [uwsgi]
-pythonpath = /root/python_env/python3/lib/python3.5/site-packages
-http = :8000
-chdir = /root/apps/plover.cloud
+http = :8080
+chdir = /www
 wsgi-file = config/wsgi.py
-static-map = /static=/root/apps/plover.cloud/static
-workers = 5
-# stats = 127.0.0.1:8080
+workers = 3
 limit-as = 256
 max-requests = 5000
 buffer-size = 65535
