--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-celery
+amqp==2.3.2
 asn1crypto==0.24.0
 astroid==1.6.3
 beautifulsoup4==4.6.0
+billiard==3.5.0.3
+celery==4.1.1
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
@@ -10,6 +12,8 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.2.2
 Django==2.0.2
+django-celery-beat==1.1.1
+django-celery-results==1.0.1
 django-cors-headers==2.2.0
 django-crontab==0.7.1
 django-extensions==2.0.7
@@ -28,6 +32,7 @@ itypes==1.1.0
 jdcal==1.4
 jieba==0.39
 Jinja2==2.10
+kombu==4.2.1
 lazy-object-proxy==1.3.1
 lxml==4.2.1
 Markdown==2.6.11
@@ -36,7 +41,6 @@ mccabe==0.6.1
 openapi-codec==1.3.2
 openpyxl==2.5.3
 optionaldict==0.1.1
-pandas==0.22.0
 paramiko==1.18.4
 Pillow==5.1.0
 psutil==5.4.5
@@ -51,11 +55,13 @@ python-dateutil==2.7.2
 pytz==2018.4
 PyYAML==3.12
 pyzmq==17.0.0
+redis==2.10.6
 requests==2.18.4
 simplejson==3.14.0
 six==1.11.0
 uritemplate==3.0.0
 urllib3==1.22
+vine==1.1.4
 wechatpy==1.6.1
 Werkzeug==0.14.1
 wincertstore==0.2
