--- a/requirements.txt
+++ b/requirements.txt
@@ -34,12 +34,14 @@ jieba==0.39
 Jinja2==2.10
 kombu==4.2.1
 lazy-object-proxy==1.3.1
+lxml==4.2.1
 Markdown==2.6.11
 MarkupSafe==1.0
 mccabe==0.6.1
 openapi-codec==1.3.2
 openpyxl==2.5.3
 optionaldict==0.1.1
+paramiko==1.18.4
 Pillow==5.1.0
 psutil==5.4.5
 psycopg2-binary==2.7.4
